<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="12dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20sp"
        android:text="@string/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="4dp"
        android:text="@string/detail_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_margin="4dp"
        android:background="#333"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <TextView
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:text="@string/how2play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="4dp"
        android:text="@string/detail_how2play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:background="#333"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>


    <TextView
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:text="@string/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="4dp"
        android:text="@string/detail_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:background="#333"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>




</LinearLayout>