<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/root_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@drawable/menu"
    android:layout_width="200dp"
    android:layout_height="230dp">



    <LinearLayout
        android:padding="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:textColor="#fff"
            android:textSize="30sp"
            android:text="@string/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_back2menu"
            android:text="@string/back2menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_exit"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_back"
            android:text="@string/back2game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>




</RelativeLayout>



