<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/entermenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="64sp"
        android:textColor="#fff"
        android:text="@string/tank_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:textSize="24sp"
            android:id="@+id/btn_start"
            android:text="@string/start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_help"
            android:text="@string/game_help"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_top"
            android:textSize="24sp"
            android:text="@string/top_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>