<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/root_lose"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@drawable/lose"
    android:layout_width="250dp"
    android:layout_height="230dp">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15sp"
                android:textColor="#fff"
                android:text="@string/life_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_second"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15sp"
                android:textColor="#fff"
                android:text="@string/enemy_counts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_enemy_counts"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_back2menu_lose"
            android:text="@string/back2menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_exit_lose"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_again"
            android:text="@string/again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>


</RelativeLayout>